nginx-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-pttest-svc
  labels:
    app: nginx
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx-pttest
